haskell/Guestfs.hs


foreign import ccall unsafe "guestfs.h guestfs_blockdev_getsz" c_blockdev_getsz
  :: GuestfsP -> CString -> IO Int64

blockdev_getsz :: GuestfsH -> String -> IO Int64
blockdev_getsz h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_getsz p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return (fromIntegral r)

foreign import ccall unsafe "guestfs.h guestfs_blockdev_rereadpt" c_blockdev_rereadpt
  :: GuestfsP -> CString -> IO CInt

blockdev_rereadpt :: GuestfsH -> String -> IO ()
blockdev_rereadpt h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_rereadpt p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_blockdev_setbsz" c_blockdev_setbsz
  :: GuestfsP -> CString -> CInt -> IO CInt

blockdev_setbsz :: GuestfsH -> String -> Int -> IO ()
blockdev_setbsz h device blocksize = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_setbsz p device (fromIntegral blocksize))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_blockdev_setra" c_blockdev_setra
  :: GuestfsP -> CString -> CInt -> IO CInt

blockdev_setra :: GuestfsH -> String -> Int -> IO ()
blockdev_setra h device sectors = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_setra p device (fromIntegral sectors))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_blockdev_setro" c_blockdev_setro
  :: GuestfsP -> CString -> IO CInt

blockdev_setro :: GuestfsH -> String -> IO ()
blockdev_setro h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_setro p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_blockdev_setrw" c_blockdev_setrw
  :: GuestfsP -> CString -> IO CInt

blockdev_setrw :: GuestfsH -> String -> IO ()
blockdev_setrw h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_blockdev_setrw p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_balance_cancel" c_btrfs_balance_cancel
  :: GuestfsP -> CString -> IO CInt

btrfs_balance_cancel :: GuestfsH -> String -> IO ()
btrfs_balance_cancel h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_btrfs_balance_cancel p path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_balance_pause" c_btrfs_balance_pause
  :: GuestfsP -> CString -> IO CInt

btrfs_balance_pause :: GuestfsH -> String -> IO ()
btrfs_balance_pause h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_btrfs_balance_pause p path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_balance_resume" c_btrfs_balance_resume
  :: GuestfsP -> CString -> IO CInt

btrfs_balance_resume :: GuestfsH -> String -> IO ()
btrfs_balance_resume h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_btrfs_balance_resume p path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_device_add" c_btrfs_device_add
  :: GuestfsP -> Ptr CString -> CString -> IO CInt

btrfs_device_add :: GuestfsH -> [String] -> String -> IO ()
btrfs_device_add h devices fs = do
  r <- withMany withCString devices $ \devices -> withArray0 nullPtr devices $ \devices -> withCString fs $ \fs -> withForeignPtr h (\p -> c_btrfs_device_add p devices fs)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_device_delete" c_btrfs_device_delete
  :: GuestfsP -> Ptr CString -> CString -> IO CInt

btrfs_device_delete :: GuestfsH -> [String] -> String -> IO ()
btrfs_device_delete h devices fs = do
  r <- withMany withCString devices $ \devices -> withArray0 nullPtr devices $ \devices -> withCString fs $ \fs -> withForeignPtr h (\p -> c_btrfs_device_delete p devices fs)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_filesystem_balance" c_btrfs_filesystem_balance
  :: GuestfsP -> CString -> IO CInt

btrfs_filesystem_balance :: GuestfsH -> String -> IO ()
btrfs_filesystem_balance h fs = do
  r <- withCString fs $ \fs -> withForeignPtr h (\p -> c_btrfs_filesystem_balance p fs)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_filesystem_sync" c_btrfs_filesystem_sync
  :: GuestfsP -> CString -> IO CInt

btrfs_filesystem_sync :: GuestfsH -> String -> IO ()
btrfs_filesystem_sync h fs = do
  r <- withCString fs $ \fs -> withForeignPtr h (\p -> c_btrfs_filesystem_sync p fs)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_qgroup_assign" c_btrfs_qgroup_assign
  :: GuestfsP -> CString -> CString -> CString -> IO CInt

btrfs_qgroup_assign :: GuestfsH -> String -> String -> String -> IO ()
btrfs_qgroup_assign h src dst path = do
  r <- withCString src $ \src -> withCString dst $ \dst -> withCString path $ \path -> withForeignPtr h (\p -> c_btrfs_qgroup_assign p src dst path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_qgroup_create" c_btrfs_qgroup_create
  :: GuestfsP -> CString -> CString -> IO CInt

btrfs_qgroup_create :: GuestfsH -> String -> String -> IO ()
btrfs_qgroup_create h qgroupid subvolume = do
  r <- withCString qgroupid $ \qgroupid -> withCString subvolume $ \subvolume -> withForeignPtr h (\p -> c_btrfs_qgroup_create p qgroupid subvolume)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_qgroup_destroy" c_btrfs_qgroup_destroy
  :: GuestfsP -> CString -> CString -> IO CInt

btrfs_qgroup_destroy :: GuestfsH -> String -> String -> IO ()
btrfs_qgroup_destroy h qgroupid subvolume = do
  r <- withCString qgroupid $ \qgroupid -> withCString subvolume $ \subvolume -> withForeignPtr h (\p -> c_btrfs_qgroup_destroy p qgroupid subvolume)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_qgroup_limit" c_btrfs_qgroup_limit
  :: GuestfsP -> CString -> Int64 -> IO CInt

btrfs_qgroup_limit :: GuestfsH -> String -> Integer -> IO ()
btrfs_qgroup_limit h subvolume size = do
  r <- withCString subvolume $ \subvolume -> withForeignPtr h (\p -> c_btrfs_qgroup_limit p subvolume (fromIntegral size))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_qgroup_remove" c_btrfs_qgroup_remove
  :: GuestfsP -> CString -> CString -> CString -> IO CInt

btrfs_qgroup_remove :: GuestfsH -> String -> String -> String -> IO ()
btrfs_qgroup_remove h src dst path = do
  r <- withCString src $ \src -> withCString dst $ \dst -> withCString path $ \path -> withForeignPtr h (\p -> c_btrfs_qgroup_remove p src dst path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_quota_enable" c_btrfs_quota_enable
  :: GuestfsP -> CString -> CInt -> IO CInt

btrfs_quota_enable :: GuestfsH -> String -> Bool -> IO ()
btrfs_quota_enable h fs enable = do
  r <- withCString fs $ \fs -> withForeignPtr h (\p -> c_btrfs_quota_enable p fs (fromBool enable))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_quota_rescan" c_btrfs_quota_rescan
  :: GuestfsP -> CString -> IO CInt

btrfs_quota_rescan :: GuestfsH -> String -> IO ()
btrfs_quota_rescan h fs = do
  r <- withCString fs $ \fs -> withForeignPtr h (\p -> c_btrfs_quota_rescan p fs)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_replace" c_btrfs_replace
  :: GuestfsP -> CString -> CString -> CString -> IO CInt

btrfs_replace :: GuestfsH -> String -> String -> String -> IO ()
btrfs_replace h srcdev targetdev mntpoint = do
  r <- withCString srcdev $ \srcdev -> withCString targetdev $ \targetdev -> withCString mntpoint $ \mntpoint -> withForeignPtr h (\p -> c_btrfs_replace p srcdev targetdev mntpoint)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_rescue_chunk_recover" c_btrfs_rescue_chunk_recover
  :: GuestfsP -> CString -> IO CInt

btrfs_rescue_chunk_recover :: GuestfsH -> String -> IO ()
btrfs_rescue_chunk_recover h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_btrfs_rescue_chunk_recover p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_rescue_super_recover" c_btrfs_rescue_super_recover
  :: GuestfsP -> CString -> IO CInt

btrfs_rescue_super_recover :: GuestfsH -> String -> IO ()
btrfs_rescue_super_recover h device = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_btrfs_rescue_super_recover p device)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_scrub_cancel" c_btrfs_scrub_cancel
  :: GuestfsP -> CString -> IO CInt

btrfs_scrub_cancel :: GuestfsH -> String -> IO ()
btrfs_scrub_cancel h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_btrfs_scrub_cancel p path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_scrub_resume" c_btrfs_scrub_resume
  :: GuestfsP -> CString -> IO CInt

btrfs_scrub_resume :: GuestfsH -> String -> IO ()
btrfs_scrub_resume h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_btrfs_scrub_resume p path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_scrub_start" c_btrfs_scrub_start
  :: GuestfsP -> CString -> IO CInt

btrfs_scrub_start :: GuestfsH -> String -> IO ()
btrfs_scrub_start h path = do
  r <- withCString path $ \path -> withForeignPtr h (\p -> c_btrfs_scrub_start p path)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_set_seeding" c_btrfs_set_seeding
  :: GuestfsP -> CString -> CInt -> IO CInt

btrfs_set_seeding :: GuestfsH -> String -> Bool -> IO ()
btrfs_set_seeding h device seeding = do
  r <- withCString device $ \device -> withForeignPtr h (\p -> c_btrfs_set_seeding p device (fromBool seeding))
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()

foreign import ccall unsafe "guestfs.h guestfs_btrfs_subvolume_delete" c_btrfs_subvolume_delete
  :: GuestfsP -> CString -> IO CInt

btrfs_subvolume_delete :: GuestfsH -> String -> IO ()
btrfs_subvolume_delete h subvolume = do
  r <- withCString subvolume $ \subvolume -> withForeignPtr h (\p -> c_btrfs_subvolume_delete p subvolume)
  if (r == -1)
    then do
      err <- last_error h
      fail err
    else return ()
